--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,37 +43,61 @@ jobs:
           haxe-version: 4.2.5
 
       - name: Install Haxelib
+
         run: |
-          haxelib --quiet setup ~/haxelib
-          haxelib --quiet install hxcpp > /dev/null
-          haxelib --quiet install lime 7.9.0
-          haxelib --quiet install openfl 9.1.0
-          haxelib --quiet install hxCodec
-          haxelib --quiet --never install flixel
-          haxelib --quiet run lime setup flixel
-          haxelib --quiet install flixel-tools
-          haxelib --quiet install flixel-ui
-          haxelib --quiet install hscript
-          haxelib --quiet install flixel-addons
-          haxelib --quiet git hxCodec https://github.com/polybiusproxy/hxcodec
-          haxelib --quiet git linc_luajit https://github.com/majigsaw77/linc_luajit.git
-          haxelib --quiet git extension-androidtools https://github.com/majigsaw77/extension-androidtools.git
+
+          haxelib setup ~/haxelib
+
+          haxelib install hxcpp > /dev/null
+
+          haxelib install lime 7.9.0
+
+          haxelib install openfl 9.1.0
+
+          haxelib --never install flixel
+
+          haxelib run lime setup flixel
+
+          haxelib install flixel-tools
+
+          haxelib install flixel-ui
+
+          haxelib install hscript
+
+          haxelib install flixel-addons
+
+          haxelib git hxCodec https://github.com/polybiusproxy/hxcodec
+
+          haxelib git linc_luajit https://github.com/majigsaw77/linc_luajit.git
+
+          haxelib git extension-androidtools https://github.com/majigsaw77/extension-androidtools.git
+
           haxelib list
 
       - name: Create Version Tag
+
         run: echo "${{github.run_id}}" > VERSION
 
       - name: Setup Lime
+
         run: |
+
           haxelib run lime setup -alias -y
+
           haxelib run lime config ANDROID_SDK $ANDROID_HOME
+
           haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_HOME
+
           haxelib run lime config JAVA_HOME $JAVA_HOME
+
           haxelib run lime config ANDROID_SETUP true
-          haxelib set lime 7.9.0 
-          haxelib set openfl 9.1.0 
-          haxelib list
+
+          haxelib set lime 7.9.0
+
+          haxelib set openfl 9.1.0
+
         env:
+
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
 
       - name: Compile
